--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@ body, html {
 }
 
 .navbar {
-    background-color: #3c464b;
+    background-color: var(--ps-navbar-bg);
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
     font-family: 'Roboto Slab', serif;
 }
@@ -27,7 +27,6 @@ body, html {
 
 body{
     height: 100vh;
-    background-color: hsl(229, 80%, 99%);
 }
 
 #root {
@@ -117,7 +116,7 @@ td {
   }
 
 tr {
-    line-height: 3.1rem;
+    line-height: 3.75rem;
 }
 
 tr:hover:not(thead>tr) {
@@ -132,11 +131,14 @@ tr:hover:not(thead>tr) {
     --ps-border-hover-color: hsl(210, 45%, 75%);
     --ps-color: hsl(200, 10%, 32%);
     --ps-color-50: hsl(200, 10%, 70%);
-    --ps-table-head-bg: hsl(210, 40%, 98%);
+    --ps-table-head-bg: hsl(210, 40%, 96%);
     --ps-table-head-color: hsl(215, 16%, 52%);
     --ps-table-head-color-hover: hsl(215, 55%, 45%);
     --ps-btn-bg: var(--ps-table-hover-bg);
     --ps-btn-bg-hover: hsl(215, 35%, 75%);
+    --ps-btn-bg-active: hsl(200, 11%, 30%);
+    --ps-navbar-bg: hsl(200, 11%, 26%);
+    --ps-navbar-bg-hover: hsl(200, 11%, 35%);
 
 }
 
@@ -218,17 +220,12 @@ tr:hover:not(thead>tr) {
 }
 
 .table-container {
-    /* border: 2px solid hsla(200, 11%, 26%, 0.1); */
-    box-shadow: 0 0 50px rgb(0 0 0 / 10%);
-    border-radius: .75rem;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .table {
-    background-color: rgb(255, 255, 255);
     letter-spacing: -.35px;
     color: var(--ps-color);
-    border-radius: 0 0 1rem 1rem !important;
 }
 
 .table--head {
@@ -271,8 +268,8 @@ tr:hover:not(thead>tr) {
 
 .dropdown-item {
     font-weight: 400;
-    font-size: .9rem;
 }
+
 .table--head>th,
 .table--head>th button {
     font-weight: 500;
@@ -306,11 +303,6 @@ tr>td:first-child {
 tr>th:last-child, 
 tr>td:last-child {
     padding-right: 1.5rem !important;
-}
-
-.search-container {
-    background-color: hsl(0, 0%, 100%);
-    border-bottom: 1px solid #dee2e6;
 }
 
 .search-container h2 {
@@ -402,6 +394,26 @@ span#status-2{
 
 /* modal */
 
+.modal-footer {
+    background-color: var(--ps-table-head-bg);
+}
+
+.modal, 
+.modal textarea {
+    color:var(--ps-color)
+}
+
+.modal label{
+    color:var(--ps-color-50)
+}
+
+.modal {
+    font-size: 16px;
+	--bs-modal-border-width: 0;
+	--bs-modal-header-border-width: 0;
+	--bs-modal-footer-border-width: 0;
+}
+
 button#status-0{
     /* background-color: hsla(45, 100%, 45%, 0.05); */
     border: 1px solid hsla(210, 50%, 50%);
@@ -449,19 +461,22 @@ button#status-2.Mui-selected{
     font-weight: 400;
 }
 
-
-.modal, 
-.modal textarea {
-    color:var(--ps-color)
-}
-
-.modal label{
-    color:var(--ps-color-50)
+.modal .MuiFormControl-root *,
+.modal .btn,
+.modal button {
+    font-size: 1.2rem;
 }
 
 .modal .MuiFormControl-root * {
-    border-color: var(--ps-border-color)
+    border-color: var(--ps-border-color);
 }
+
+
+.css-17ndd9v-MuiButtonBase-root-MuiToggleButton-root,
+.css-1xgjc5y-MuiButtonBase-root-MuiToggleButton-root {
+	line-height: 1.5   ;
+}
+
 
 .btn-ps-accept {
     --bs-btn-color: hsla(210, 50%, 35%) !important;
@@ -541,8 +556,8 @@ button#status-2.Mui-selected{
 }
 
 .table--head a:not(.status-toggle) {
-    height: 1.5rem;
-    line-height: 1.5rem;
+    /* height: 1.5rem;
+    line-height: 1.5rem; */
 }
 
 .user-name-toggle:nth-child(2) {
@@ -615,6 +630,24 @@ tr:hover .project-edit-icon {
     box-shadow: 0 0 18px hsla(200, 8%, 15%, 0.3);
 }
 
-.filter-indicator {
-    background-color: var(--ps-btn-bg);
+
+.filter-indicator >.btn {
+    --bs-btn-color: white;
+    --bs-btn-bg: var(--ps-navbar-bg);
+    --bs-btn-border-color: var(--bs-btn-bg);
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: var(--ps-navbar-bg-hover);
+    --bs-btn-hover-border-color: var(--ps-navbar-bg-hover);
+    --bs-btn-focus-shadow-rgb: 49,132,253;
+    --bs-btn-active-color: #fff;
+    --bs-btn-hover-bg: var(--ps-navbar-bg-hover);
+    --bs-btn-hover-border-color: var(--ps-navbar-bg-hover);
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    font-weight: 500;
+}
+
+.btn-check:checked + .btn, .btn.active, .btn.show, .btn:first-child:active, :not(.btn-check) + .btn:active {
+	color: var(--bs-btn-active-color);
+	background-color: var(--ps-btn-bg-active);
+	border-color: var(--ps-btn-bg-active);
 }
