--- a/src/style.css
+++ b/src/style.css
@@ -384,10 +384,16 @@ tr>td:last-child {
     padding-right: 1.5rem !important;
 }
 
-.search-container h2 {
+.table-container h2 {
     color: var(--ps-color);
     font-weight: 600;
     letter-spacing: -1px;
+}
+
+.table-container h5 {
+    color: var(--ps-color);
+    font-weight: 500;
+    letter-spacing: -.75px;
 }
 
 .main--search-input {
