--- a/src/style.css
+++ b/src/style.css
@@ -299,8 +299,11 @@ tr:hover:not(thead>tr) {
     cursor:pointer;
 }
 
-.table-container {
+.table-holder  {
     overflow-x: hidden;
+    border-radius: 0.375rem;
+    border: 1px solid var(--ps-border-color);
+    margin: 1rem 0;
 }
 
 .table {
@@ -393,7 +396,8 @@ tr>td:last-child {
 .table-container h5 {
     color: var(--ps-color);
     font-weight: 500;
-    letter-spacing: -.75px;
+    letter-spacing: -1px;
+    opacity: .85;
 }
 
 .main--search-input {
