--- a/src/style.css
+++ b/src/style.css
@@ -20,10 +20,11 @@ table .dropdown-item {
 }
 
 .sidebar {
-    background-color: var(--ps-table-head-bg);
+    /* background-color: var(--ps-table-head-bg); */
     border-right: 1px solid var(--ps-border-color);
     height: 100%;
     max-width: 280px;
+    font-size: 1rem;
     /* transition: all .3s ease; */
 }
 
@@ -32,31 +33,16 @@ table .dropdown-item {
     transition: all .2s ease-out;
     position: relative;
     width: 100%;
-}
-
-.nav-link::after {
-    content: '';
-    position: absolute;
-    width: 2px;
-    height: 0%;
-	background-color: var(--ps-table-hover-color);
-    right: -1px;
-    top: 0;
-    transition: all .7s cubic-bezier(.39,.58,.57,1);
+    border-radius: .375rem;
 }
 
 .nav-link.active,
 .nav-link.active:focus,
 .nav-link.active:hover {
 	color: var(--ps-table-hover-color);
+    background-color: var(--ps-table-head-bg);
     font-weight: 500;
     position: relative;
-}
-
-.nav-link.active::after,
-.nav-link.active:focus::after,
-.nav-link.active:hover::after {
-    height: 100%;
 }
 
 .nav-link:focus, 
@@ -207,7 +193,7 @@ tr:hover:not(thead>tr) {
     --ps-table-border-color: hsl(210, 30%, 94%);
     --ps-border-color: hsl(210, 30%, 90%);
     --ps-border-hover-color: hsl(210, 45%, 75%);
-    --ps-color: hsl(200, 20%, 32%);
+    --ps-color: #3c464b;
     --ps-color-50: hsl(200, 20%, 70%);
     --ps-nav-color: hsl(200, 30%, 60%);
     --ps-nav-color-hover: hsl(200, 30%, 35%);
@@ -395,9 +381,8 @@ tr>td:last-child {
 
 .table-container h5 {
     color: var(--ps-color);
-    font-weight: 500;
-    letter-spacing: -1px;
-    opacity: .85;
+    font-weight: 600;
+    letter-spacing: -.75px;
 }
 
 .main--search-input {
@@ -437,26 +422,12 @@ tr>td:last-child {
 
 }
 
-.new-post-counter {
-    letter-spacing: -.5px;
-    border-radius: .5rem;
-    color: var(--ps-table-hover-color);
-    background-color: var(--ps-table-hover-bg);
-    font-weight: 600;
-}
-
-.new-post-counter.active {
-    color:hsl(174, 34%, 40%);
-    background-color: hsla(174, 65%, 64%, 0.25);
-}
-
 light {
     font-weight: 400;
 }
 
 .new-project-counter-icon {
     position: relative;
-    top: -1.25px
 }
 
 span#status-0{
@@ -708,8 +679,8 @@ tr:hover .project-edit-icon {
 
 
 .filter-indicator >.btn {
-    --bs-btn-color: white;
-    --bs-btn-bg: var(--ps-table-head-color);
+    --bs-btn-color: var(--ps-table-head-color-hover);
+    --bs-btn-bg: var(--ps-table-head-bg);
     --bs-btn-border-color: var(--bs-btn-bg);
     --bs-btn-hover-color: #fff;
     --bs-btn-hover-bg: var(--ps-btn-dark-bg-hover);
@@ -719,7 +690,6 @@ tr:hover .project-edit-icon {
     --bs-btn-hover-bg: var(--ps-btn-dark-bg-hover);
     --bs-btn-hover-border-color: var(--ps-btn-dark-bg-hover);
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-    --bs-btn-font-size: 13px;
     font-weight: 500;
 }
 
@@ -731,6 +701,24 @@ tr:hover .project-edit-icon {
 
 /* cards */
 
+.card {
+    --bs-card-border-color: var(--ps-border-color);
+    overflow: hidden;
+    color: var(--ps-color);
+
+}
+
+.card svg {
+    filter: drop-shadow(0 0 .25rem rgb(0 0 0 / 0.4));
+}
+
 .card-header {
 	border-bottom: none;
+    background-color: transparent;
+    font-weight: 300;
+
+}
+
+.card-image {
+    scale: 2;
 }
