--- a/src/style.css
+++ b/src/style.css
@@ -34,7 +34,6 @@ table .dropdown-item {
     position: relative;
     width: 100%;
     border-radius: .375rem;
-    height: 3rem;
 }
 
 .nav-link.active,
@@ -130,12 +129,38 @@ td {
     max-width: 18ch;
 }
 
+@media (min-width: 1201px) {
+    .navbar {
+        min-width: 275px;
+    }
+
+    .offcanvas.offcanvas-start {
+        width: 225px !important
+        
+    }
+
+    .navbar .flex-column {
+        flex-grow: 1;
+    }
+}
+
+@media (max-width: 1200px) and (min-width: 768px) {
+    .navbar {
+        min-width: 225px;
+    }
+
+    .offcanvas.offcanvas-start {
+        width: 175px !important
+    }
+}
+
 @media screen and (max-width: 768px) {
 
     .navbar {
         border-bottom: 1px solid var(--ps-border-color);
         border-right: none;
         box-shadow: 0 0 1rem var(--ps-shadow-hover);
+        align-items: flex-start !important;
     }
 
     td.table--customer,
@@ -338,13 +363,13 @@ td {
     padding: .5rem .675rem !important;
 }
 
-.table-container h2 {
+h2 {
     color: var(--ps-color);
     font-weight: 600;
     letter-spacing: 1px;
 }
 
-.table-container h5 {
+h5 {
     color: var(--ps-color);
     font-weight: 600;
     letter-spacing: -.75px;
@@ -544,8 +569,6 @@ button#status-2.Mui-selected{
     border-width: 2px;
 }
 
-
-
 .status-description {
     font-weight: 500;
 }
@@ -555,10 +578,23 @@ button#status-2.Mui-selected{
 	background-color: var(--ps-table-hover-bg);
 }
 
+.dropdown-menu .dropdown-item:first-child {
+    position:relative;
+}
+
+.dropdown-menu .dropdown-item:first-child::after {
+    content: '';
+    width: 80%;
+    bottom: 0;
+    position:absolute;
+    height: 1px;
+    background-color: var(--ps-border-color);
+}
+
 .dropdown-menu {
 	border: var(--bs-dropdown-border-width) solid var(--ps-table-border-color);
 	border-radius: var(--bs-dropdown-border-radius);
-    box-shadow: 0 0 10px 1px var(--ps-table-hover-bg);
+    box-shadow: 0 0 1rem 1px var(--ps-shadow-hover);
     --bs-dropdown-padding-y: 0;
 }
 
@@ -694,6 +730,11 @@ span.strong {
     background-color: white;
     border-right: 1px solid var(--ps-border-color);
     border-color: var(--ps-border-color);
+    align-items: flex-start;
+}
+
+.offcanvas-header {
+    border-bottom: 1px solid var(--ps-btn-dark-bg-hover);
 }
 
 .offcanvas-header .btn-close {
