--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,7 @@ table .dropdown-item {
 .sidebar {
     border-right: 1px solid var(--ps-border-color);
     height: 100%;
+    /* min-height: -webkit-fill-available; */
     width: 280px;
     background-color: white;
 }
@@ -54,18 +55,28 @@ table .dropdown-item {
     height: 80%;
 }
 
-body{
-    height: 100vh;
-}
-
-#root {
-    height: 100%;
+body,
+#root,
+.app-container {
+    min-height: -webkit-fill-available;
+    min-height: 100vh;
 }
 
 .main {
     overflow-y: scroll;
-    overflow-x: hidden;
+    min-height: 100%;
+    /* overflow-x: hidden; */
 }
+
+.main::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .main {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
 
 .card-footer {
     background-color: white;
