--- a/src/style.css
+++ b/src/style.css
@@ -144,6 +144,7 @@ td {
 @media (min-width: 1201px) {
     .navbar {
         min-width: 275px;
+        padding-top: 1.5rem;
     }
 
     .offcanvas.offcanvas-start {
@@ -162,6 +163,7 @@ td {
 @media (max-width: 1200px) and (min-width: 768px) {
     .navbar {
         min-width: 225px;
+        padding-top: 1.5rem;
     }
 
     .offcanvas.offcanvas-start {
